javali_tests/A3/A4_keinestamSchmid/fail/IncorrectIfCondition.javali
// Rule 2.3.3: Tests that a incorrect (i.e. non-bool) if condition fails.
class Main {
	void main() {
		if (6) {
			return;
		}
	}
}